sources = [
  'SSL/Util.cpp',
  'SSL/InitExit.cpp',
  'SSL/Socket.cpp',
  'SSL/P7S.cpp',
  'Cpu.cpp',
  'Mem.cpp',
  'SIMD.cpp',
  'Mt.cpp',
  'heaputil.cpp',
  'hheap.cpp',
  'sheap.cpp',
  'lheap.cpp',
  'heap.cpp',
  'heapdbg.cpp',
  'StringFind.cpp',
  'String.cpp',
  'WString.cpp',
  'StrUtil.cpp',
  'SplitMerge.cpp',
  'Utf.cpp',
  'UnicodeInfo.cpp',
  'CharSet.cpp',
  'Bom.cpp',
  'Path.cpp',
  'NetNode.cpp',
  'App.cpp',
  'Huge.cpp',
  'Stream.cpp',
  'BlockStream.cpp',
  'FileMapping.cpp',
  'FilterStream.cpp',
  'Log.cpp',
  'Debug.cpp',
  'Ini.cpp',
  'Util.cpp',
  'mathutil.cpp',
  'Random.cpp',
  'Speller.cpp',
  'LocalProcess.cpp',
  'Vcont.cpp',
  'Index.cpp',
  'TimeDate.cpp',
  'Value.cpp',
  'ValueUtil.cpp',
  'Format.cpp',
  'CvFlt.cpp',
  'Convert.cpp',
  'Color.cpp',
  'Gtypes.cpp',
  't.cpp',
  'Lang.cpp',
  'LangInfo.cpp',
  'parser.cpp',
  'XML.cpp',
  'Xmlize.cpp',
  'JSON.cpp',
  'Uuid.cpp',
  'Ptr.cpp',
  'z.cpp',
  'Topic.cpp',
  'CoWork.cpp',
  'ValueCache.cpp',
  'MD5.cpp',
  'SHA1.cpp',
  'SHA256.cpp',
  'xxHsh.cpp',
  'InetUtil.cpp',
  'MIME.cpp',
  'Socket.cpp',
  'Http.cpp',
  'WebSocket.cpp',
  'Dli.cpp',
  'Win32Util.cpp',
]

core_dependencies = [dependency('libzstd')]

core_lib = library('Core', sources: sources,
                   include_directories:
                      [uppsrc_inc],
                   dependencies: core_dependencies)


core_dep = declare_dependency(link_with: core_lib,
                              include_directories: [uppsrc_inc],
                              dependencies: dependency('libzstd'))
