sources = ['SystemDraw.cpp',
           'Frame.cpp',
           'CtrlMt.cpp',
           'Ctrl.cpp',
           'CtrlChild.cpp',
           'CtrlPos.cpp',
           'CtrlDraw.cpp',
           'CtrlMouse.cpp',
           'CtrlKbd.cpp',
           'CtrlTimer.cpp',
           'CtrlClip.cpp',
           'LocalLoop.cpp',
           'Preedit.cpp',
           'CtrlCoreInit.cpp',
           'TopWindow.cpp',
           'DrawWin32.cpp',
           'DrawOpWin32.cpp',
           'DrawTextWin32.cpp',
           'ImageWin32.cpp',
           'MetaFile.cpp',
           'UtilWin32.cpp',
           'Win32Ctrl.cpp',
           'Win32Wnd.cpp',
           'Win32Clip.cpp',
           'Win32DnD.cpp',
           'Win32Proc.cpp',
           'TopWin32.cpp',
           'DHCtrl.cpp',
           'DrawX11.cpp',
           'DrawOpX11.cpp',
           'DrawTextX11.cpp',
           'ImageX11.cpp',
           'UtilX11.cpp',
           'X11Ctrl.cpp',
           'X11Wnd.cpp',
           'X11Proc.cpp',
           'X11Clip.cpp',
           'X11DnD.cpp',
           'X11Top.cpp',
           'X11ImgClip.cpp',
           'X11App.cpp',
           'X11DHCtrl.cpp',
           'GtkDrawOp.cpp',
           'GtkDrawText.cpp',
           'GtkDrawImage.cpp',
           'GdkImage.cpp',
           'GtkUtil.cpp',
           'GtkX11Util.cpp',
           'GtkCtrl.cpp',
           'GtkCapture.cpp',
           'GtkWnd.cpp',
           'GtkCreate.cpp',
           'GtkEvent.cpp',
           'GtkTop.cpp',
           'GtkClip.cpp',
           'GtkDnD.cpp',
           'GtkApp.cpp',
           'CocoCtrl.cpp',
           'CocoWnd.cpp',
           'CocoTop.cpp',
           'CocoChSysInit.cpp',
           'ParseRTF.cpp',
           'EncodeRTF.cpp']

gtk_dep = dependency('gtk+-3.0')

ctrlcore_lib = library('CtrlCore',
                       sources: sources,
                       include_directories:
                          [uppsrc_inc],
                       dependencies: gtk_dep)

ctrlcore_dep = declare_dependency(link_with: ctrlcore_lib,
                                  include_directories: include_directories('..'),
                                  dependencies: gtk_dep)
